--- a/styles.css
+++ b/styles.css
@@ -397,7 +397,7 @@ header {
 }
 /* Styling the project button with glow and pulsating effect */
 .project-button {
-    background-color: #444; /* Gray background for the button */
+    background-color: #COCOFFCO; /* Gray background for the button */
     color: white;
     padding: 12px 25px; /* Slightly larger padding */
     border-radius: 5px;
@@ -414,7 +414,7 @@ header {
 }
 
 .project-button:hover {
-    background-color: #555; /* Change background on hover */
+    background-color: #COCOFFCO; /* Change background on hover */
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.7); /* Stronger glow on hover */
 }
 
